<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context="com.demoetxt.droidsrce.homedashboard.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFf300"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_dashboard_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Card 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/bank_card"
            android:layout_width="160dp"
            android:layout_height="195dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_purple"
                    android:padding="12dp"
                    android:src="@drawable/ic_attach_money_24"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banking_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_bank_activity"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ideas_card"
            android:layout_width="160dp"
            android:layout_height="195dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_pink"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_lightbulb_2_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ideas_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_bank_activity"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Card 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/add_card"
            android:layout_width="160dp"
            android:layout_height="195dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_green"
                    android:padding="12dp"
                    android:src="@drawable/ic_add_circle_24"
                    android:contentDescription="@null" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_bank_activity"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/links_card"
            android:layout_width="160dp"
            android:layout_height="195dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_yellow"
                    android:padding="12dp"
                    android:src="@drawable/ic_attach_file_24"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/links_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_bank_activity"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Large Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/wifi_card"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_background_purple"
                android:padding="8dp"
                android:src="@drawable/ic_android_wifi_3_bar_24"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_title"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp
"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/check_your_bank_activity"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"
                 />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
